--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Free online wheel spinner tool for random selection. Our Wheel of Names helps you pick winners, make decisions, or select randomly for classrooms, contests, or team activities. Customizable colors, easy sharing, and mobile-friendly.">
+    <meta name="description" content="Free online wheel spinner tool for random selection. Our Wheel of Names helps you pick winners, make decisions, or select randomly">
     <meta name="keywords" content="wheel of names, random name picker, decision wheel, prize wheel, classroom spinner, online spinner, random selector, name picker, giveaway tool, contest winner picker">
     <meta name="theme-color" content="#3369e8">
     <meta property="og:title" content="Wheel of Names - Free Random Picker Wheel for Decisions & Giveaways">
@@ -12,7 +12,10 @@
     <meta property="og:url" content="https://spin-names.vercel.app/">
     <link rel="canonical" href="https://spin-names.vercel.app/">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <title>Wheel of Names - Free Random Picker Wheel for Decisions & Giveaways</title>
+    <title>Wheel of Names - Free Random Picker Wheel </title>
+    <!-- Apple touch icon -->
+
+    <link rel="apple-touch-icon"  href="logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
