--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="google-site-verification" content="bTRlMgrBbckq_jgRj0Eiw0ds2p2lBt0zADKkc6Ydch0" />
     <meta name="description" content="Free online wheel spinner tool for random selection. Our Wheel of Names helps you pick winners, make decisions, or select randomly">
     <meta name="keywords" content="wheel of names, random name picker, decision wheel, prize wheel, classroom spinner, online spinner, random selector, name picker, giveaway tool, contest winner picker">
     <meta name="theme-color" content="#3369e8">
