--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             text-decoration: none;
             font-size: 10px;
             line-height: 1.2;
-            position: relative;
-            overflow: hidden;
+        position: absolute;
+    overflow: hidden;
+    z-index: 99;
+    top: 195px;
+             
         }
         
         .banner:before {
